# tic-tak-toe-on-SDL-net

./: CMakeLists.txt  CMakeLists_old.txt  README-ru.md  README.md  create-data-file.bat  create-data-file.sh
docs/: INSTALL-Debian.sh  INSTALL-Fedora.sh  INSTALL-Windows.txt
src/: animationsNames.cpp  animationsNames.hpp  baseGUI.cpp  baseGUI.hpp  codes.hpp  cyclesNames.cpp  cyclesNames.hpp  dataLoader.cpp  dataLoader.hpp  dataTypes.hpp  define.hpp  entity.cpp  entity.hpp  fontsNames.cpp  fontsNames.hpp  game.cpp  game.hpp  gameClient.cpp  gameServer.cpp  gameServer.hpp  gameSingle.cpp  gameSingle.hpp  include.hpp  init.cpp  initFile.cpp  initFile.hpp  internetCodes.hpp  languagesNames.hpp  main.cpp  musicNames.cpp  musicNames.hpp  objects.cpp  pause.cpp  pause.hpp  set.rc  settingFile.cpp  soundsNames.cpp  soundsNames.hpp  structs.hpp  testing.hpp  (+2 more)
src/GUI/: animation.cpp  baseGUI.hpp  dynamicText.cpp  highlightedStaticText.cpp  imageButton.cpp  infoBox.cpp  interface.hpp  oneOptionBox.cpp  rectBackplate.cpp  roundedBackplate.cpp  scrollBox.cpp  selectBox.cpp  slider.cpp  staticText.cpp  template.cpp  textButton.cpp  textureTemplate.cpp  twoOptionBox.cpp  typeBox.cpp  typeField.cpp
src/cycles/: baseCycle.cpp  baseCycle.hpp  clientGame.cpp  clientGame.hpp  clientLobby.cpp  clientLobby.hpp  coopGame.cpp  coopGame.hpp  gameCycle.cpp  gameCycle.hpp  internetCycle.cpp  internetCycle.hpp  parametersCycle.cpp  parametersCycle.hpp  selectCycle.cpp  selectCycle.hpp  serverGame.cpp  serverGame.hpp  serverLobby.cpp  serverLobby.hpp  singleplayerGame.cpp  singleplayerGame.hpp
src/data/: app.cpp  app.hpp  application.cpp  application.hpp  array.hpp  colors.hpp  cycleTemplate.cpp  cycleTemplate.hpp  exceptions.hpp  idleTimer.cpp  idleTimer.hpp  initFile.cpp  initFile.hpp  languages.cpp  languages.hpp  libraries.cpp  libraries.hpp  logger.hpp  macroses.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  mouse.cpp  mouse.hpp  musics.hpp  sounds.hpp  texts.hpp  time.hpp  window.cpp  window.hpp
src/game/: connectionLostBox.cpp  connectionLostBox.hpp  field.cpp  field.hpp  gameField.cpp  gameField.hpp  gameSaves.cpp  gameSaves.hpp  saveInfo.cpp  saveInfo.hpp  savedFields.cpp  savedFields.hpp  screamer.cpp  screamer.hpp  selectingMenu.cpp  selectingMenu.hpp  settingsMenu.cpp  settingsMenu.hpp  (+6 more)
src_old/: dataTypes.hpp  main.cpp
(+113 files in other folders)
